feat(chat): release 1: add CreateSession API for chat 2: add UpdateSession API for chat
